<resources>
    <string name="app_name">BlueVision</string>
    <string name="empty_text">No items</string>
    <string name="title_monitor">Cameras</string>

    <string name="title_settings">Settings</string>
    <string name="title_recordings">Recordings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failed_url">"Please check the web url"</string>
    <string name="network_err">Please check your internet connection</string>
    <string name="help">Help</string>
    <string name="ps_url">https://play.google.com/store/apps/details?id=com.firstzoom.bluevision</string>
    <string name="intro">Use BlueVision as video surveilance Service \n</string>
    <string name="help_url">https://www.1stzoom.com</string>
    <string name="prompt_url">Web url</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_group">"Monitors"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_url">Please enter correct url</string>
    <string name="link_expired">Login failed.The login link has expired.</string>
    <string name="login_unable">Unable to login</string>

</resources>